if COMPILE_PHAPI
lib_LIBRARIES = libgsm.a
endif
EXTRA_DIST = config.h gsm.h private.h proto.h unproto.h


libgsm_a_SOURCES = add.c code.c debug.c decode.c gsm_create.c gsm_decode.c gsm_destroy.c gsm_encode.c gsm_explode.c \
  gsm_implode.c gsm_option.c gsm_print.c long_term.c lpc.c preprocess.c rpe.c short_term.c table.c 
