if COMPILE_PHAPI
lib_LIBRARIES = libilbc.a
endif

EXTRA_DIST = anaFilter.h constants.h createCB.h doCPLC.h enhancer.h filter.h FrameClassify.h gainquant.h getCBvec.h helpfun.h hpInput.h hpOutput.h iCBConstruct.h iCBSearch.h iLBC_decode.h iLBC_define.h iLBC_encode.h LPCdecode.h LPCencode.h lsf.h packing.h StateConstructW.h StateSearchW.h syntFilter.h

libilbc_a_SOURCES = anaFilter.c constants.c createCB.c doCPLC.c enhancer.c filter.c FrameClassify.c gainquant.c \
 getCBvec.c helpfun.c hpInput.c hpOutput.c iCBConstruct.c iCBSearch.c iLBC_decode.c iLBC_encode.c \
 LPCdecode.c LPCencode.c lsf.c packing.c StateConstructW.c StateSearchW.c syntFilter.c




